kubernetes.yaml
---
# Web app deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobilidade-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobilidade-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: mobilidade-app
    spec:
      containers:
        - name: mobilidade-app
          image: gcr.io/PROJECT_ID/IMAGE_APP:TAG
          ports:
            - containerPort: 80
      restartPolicy: Always

---
# Web app service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mobilidade-app
  name: mobilidade-app
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: mobilidade-app

---
# Web app Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobilidade-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - mobilidade.rio
        - www.mobilidade.rio
        - paradas.mobilidade.rio
      secretName: app-mobilidade-tls
  rules:
    - host: mobilidade.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobilidade-app
                port:
                  number: 80
    - host: www.mobilidade.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobilidade-app
                port:
                  number: 80
    - host: paradas.mobilidade.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobilidade-app
                port:
                  number: 80
